-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 11, 17, 20, 21, 21.0.1, 22
-
Component/s: hotspot
-
b17
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8319226 | 21.0.2 | Aleksey Shipilev | P3 | Resolved | Fixed | b05 |
java -XX:-BackgroundCompilation -XX:-UseOnStackReplacement -XX:-TieredCompilation -XX:CompileOnly=TestAddPChainMismatchedBase::test -XX:LoopMaxUnroll=2 -XX:+UseParallelGC -XX:+StressIGVN -XX:-UseLoopPredicate -XX:-UseProfiledLoopPredicate -XX:StressSeed=2062976637 TestAddPChainMismatchedBase
I get:
Internal Error (/home/roland/jdk-jdk/src/hotspot/share/opto/compile.cpp:3267), pid=2783357, tid=2783366
assert(!addp->is_AddP() || addp->in(AddPNode::Base)>is_top() || addp>in(AddPNode::Base) == n->in(AddPNode::Base)) failed: Base pointers must match (addp 682)
- backported by
-
JDK-8319226 C2: Load can bypass subtype check that enforces it's from the right object type
-
- Resolved
-
- duplicates
-
JDK-8321370 SIGSEGV PhaseIdealLoop::build_loop_late_post_work(Node*, bool)+0xce
-
- Closed
-
- relates to
-
JDK-8297933 [REDO] Compiler should only use verified interface types for optimization
-
- Resolved
-
-
JDK-8351889 C2 crash: assertion failed: Base pointers must match (addp 344)
-
- Open
-
-
JDK-8139771 Eliminating CastPP nodes at Phis when they all come from a unique input may cause crash
-
- Closed
-
- links to
-
Commit
openjdk/jdk21u/c3c2b9f4
-
Commit
openjdk/jdk/52983ed5
-
Review
openjdk/jdk21u/291
-
Review
openjdk/jdk/15595