8303737: C2: Load can bypass subtype check that enforces it's from the right object type

Backport-of: 52983ed529182901db4e33857bfeab2727e235df